# beerpong

./: .gitignore  .gitmodules
KinectVision/: CMakeLists.txt  test
KinectVision/src/: test.cpp
include/: Packetizer.hpp  Serial.hpp  controller.h  kinect.h  mainwindow.h  pid.h  player.h  timer.h
microcontroller/: pinout.csv
microcontroller/include/: chip_config.h  input_capture.h  softpwm.h
microcontroller/proj/nbproject/: Makefile-default.mk  Makefile-genesis.properties  configurations.xml  project.xml
microcontroller/src/: input_capture.c  main.c  softpwm.c
microcontroller/test/: feedback.py  pwm.py
resources/: stylesheet.qss
src/: Packetizer.cpp  Serial.cpp  controller.cpp  kinect.cpp  main.cpp  mainwindow.cpp  player.cpp  timer.cpp
ui/: mainwindow.ui
